# global-retail-rag

./: .env  .gitignore  README.md  architecture_flow.txt  main.py  pyproject.toml  squad2_rag.ipynb
data/: inventory.csv
